terraform/config/ecs-best-practices/validate-ecs-task-public-ip/test/chainsaw-test.yaml
# yaml-language-server: $schema=https://raw.githubusercontent.com/kyverno/chainsaw/main/.schemas/json/test-chainsaw-v1alpha1.json
apiVersion: chainsaw.kyverno.io/v1alpha1
kind: Test
metadata:
  name: good-test
spec:
  steps:
    - name: kyverno-json
      try:
      - script:
          content: |
            set -e
            kyverno-json scan --policy ../validate-ecs-task-public-ip.yaml --payload good-payload.json --output json --bindings ./binding.yaml
          check:
            ($error): ~
            (json_parse($stdout)):
            - results:
              - policy:
                  apiVersion: json.kyverno.io/v1alpha1
                  kind: ValidatingPolicy
                  metadata:
                    name: validate-ecs-task-public-ip
                rules:
                - rule:
                    name: validate-ecs-task-public-ip
                  error: ~
                  violations: ~
---
# yaml-language-server: $schema=https://raw.githubusercontent.com/kyverno/chainsaw/main/.schemas/json/test-chainsaw-v1alpha1.json
apiVersion: chainsaw.kyverno.io/v1alpha1
kind: Test
metadata:
  name: bad-test
spec:
  steps:
    - name: kyverno-json
      try:
      - script:
          content: |
            set -e
            kyverno-json scan --policy ../validate-ecs-task-public-ip.yaml --payload bad-payload.json --output json --bindings ./binding.yaml
          check:
            ($error): ~
            (json_parse($stdout)):
            - results:
              - policy:
                  apiVersion: json.kyverno.io/v1alpha1
                  kind: ValidatingPolicy
                  metadata:
                    name: validate-ecs-task-public-ip
                rules:
                - rule:
                    name: validate-ecs-task-public-ip
                  error: ~
                  violations:
                  - message: Public IP address should not be enabled (CHECK=spec.rules[0].assert.any[0])
                    errors:
                    - type: FieldValueInvalid
                      value: true
                      detail: 'Expected value: false'
